--- a/frontend/src-tauri/Cargo.toml
+++ b/frontend/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "teste-appl"
+name = "DoctorTicket"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "DoctorTicket PHP"
+authors = ["Samuel Aluizio de Melo Goncalves"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
